--- a/dbBackup/Jenkinsfile
+++ b/dbBackup/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
             sh"""
             sshpass -p $pass ssh root@188.166.87.169
             echo "Login to Host successfull"
-            docker exec -t rw_db pg_dumpall -c -U user > postgres_dump.sql
+            docker exec -t rw_db pg_dumpall -c -U postgres > postgres_dump.sql
             mv ./postgres_dump.sql /var/jenkins_home/postgressBackup/postgres_dump-${env.BUILD_NUMBER}.sql
             """
             }
